--- a/css_stylesheet.css
+++ b/css_stylesheet.css
@@ -3,6 +3,11 @@ body {
 	font-family: 'Fredoka One', cursive;
 }
 
+about{
+
+	font-family: 'Fugaz One', cursive;
+
+}
 
 #blue-button {
   position: relative;
